feat: inコマンドからtierを削除
